NSGs.tf
resource "azurerm_network_security_group" "TestNSG" {
    name                = "TestNSG"
    location            = azurerm_resource_group.TestRG.location
    resource_group_name = azurerm_resource_group.TestRG.name

    security_rule {
        name                       = "AllowHTTP"
        priority                   = 110
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "80"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

    security_rule {
        name                       = "AllowHTTPS"
        priority                   = 130
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "443"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
}

resource "azurerm_subnet_network_security_group_association" "TestSubnetNSGAssociation" {
    subnet_id                 = azurerm_subnet.TestSubnet.id
    network_security_group_id = azurerm_network_security_group.TestNSG.id
}
